--- a/VirtualTourist/Base.lproj/Main.storyboard
+++ b/VirtualTourist/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="2hY-Tf-lvz">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="2hY-Tf-lvz">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -31,6 +31,9 @@
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap pins to delete" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YvS-9e-tSK">
                                 <rect key="frame" x="0.0" y="597" width="375" height="70"/>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="fYA-Aw-OjB"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
@@ -38,14 +41,13 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="YvS-9e-tSK" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="533" id="5cJ-Nm-zEk"/>
+                            <constraint firstItem="YvS-9e-tSK" firstAttribute="trailing" secondItem="uAB-GQ-R8q" secondAttribute="trailing" id="Bji-fN-pMm"/>
                             <constraint firstItem="uAB-GQ-R8q" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Ctt-Xb-SzM"/>
                             <constraint firstAttribute="trailing" secondItem="uAB-GQ-R8q" secondAttribute="trailing" id="GeN-0p-li2"/>
                             <constraint firstItem="uAB-GQ-R8q" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="GsA-Wr-TU6"/>
-                            <constraint firstItem="YvS-9e-tSK" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="Obp-CO-z0s"/>
                             <constraint firstItem="uAB-GQ-R8q" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="ZMl-zj-T1D"/>
-                            <constraint firstItem="uAB-GQ-R8q" firstAttribute="leading" secondItem="YvS-9e-tSK" secondAttribute="leading" id="eLk-fm-9m6"/>
-                            <constraint firstItem="uAB-GQ-R8q" firstAttribute="trailing" secondItem="YvS-9e-tSK" secondAttribute="trailing" id="ujQ-Pb-9xI"/>
+                            <constraint firstItem="YvS-9e-tSK" firstAttribute="leading" secondItem="uAB-GQ-R8q" secondAttribute="leading" id="cSR-PG-bWa"/>
+                            <constraint firstItem="YvS-9e-tSK" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="ljB-yV-gSx"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Virtual Tourist" id="hOu-CS-bhu">
@@ -74,7 +76,7 @@
                     </connections>
                 </pongPressGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="66" y="-13"/>
+            <point key="canvasLocation" x="64.799999999999997" y="-13.043478260869566"/>
         </scene>
         <!--Pin Details-->
         <scene sceneID="1iW-s5-4Ii">
@@ -135,6 +137,17 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jXr-0m-WYP">
+                                <rect key="frame" x="0.0" y="614" width="375" height="53"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="53" id="WkM-y5-MhQ"/>
+                                </constraints>
+                                <state key="normal" title="New Collection"/>
+                                <connections>
+                                    <action selector="newCollection:" destination="sfZ-zf-twr" eventType="touchUpInside" id="LjH-A3-AeN"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -143,7 +156,10 @@
                             <constraint firstItem="bdp-D7-TLe" firstAttribute="bottom" secondItem="2FW-ub-kz2" secondAttribute="top" id="CjC-M9-FRx"/>
                             <constraint firstItem="bdp-D7-TLe" firstAttribute="top" secondItem="KbS-7c-ljb" secondAttribute="bottom" constant="1" id="Cvg-2d-egt"/>
                             <constraint firstItem="KbS-7c-ljb" firstAttribute="top" secondItem="o5j-s2-UuJ" secondAttribute="bottom" id="T9e-tl-lpa"/>
+                            <constraint firstItem="jXr-0m-WYP" firstAttribute="trailing" secondItem="bdp-D7-TLe" secondAttribute="trailing" id="XdT-JG-WdT"/>
                             <constraint firstAttribute="trailing" secondItem="KbS-7c-ljb" secondAttribute="trailing" id="aLb-MR-1YM"/>
+                            <constraint firstAttribute="bottom" secondItem="jXr-0m-WYP" secondAttribute="bottom" id="dH3-4x-TGB"/>
+                            <constraint firstItem="jXr-0m-WYP" firstAttribute="leading" secondItem="bdp-D7-TLe" secondAttribute="leading" id="ss5-rc-l9E"/>
                             <constraint firstItem="KbS-7c-ljb" firstAttribute="trailing" secondItem="bdp-D7-TLe" secondAttribute="trailing" id="ycc-NW-FP4"/>
                         </constraints>
                     </view>
@@ -163,7 +179,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="g4t-LN-zSp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1649" y="-13"/>
+            <point key="canvasLocation" x="1648.8" y="-13.043478260869566"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="m7R-ha-AeT">
