--- a/VirtualTourist/Base.lproj/Main.storyboard
+++ b/VirtualTourist/Base.lproj/Main.storyboard
@@ -174,6 +174,7 @@
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="collectView" destination="bdp-D7-TLe" id="ZUD-u1-upz"/>
+                        <outlet property="collectionButton" destination="jXr-0m-WYP" id="gjv-bY-rcs"/>
                         <outlet property="mapView" destination="KbS-7c-ljb" id="q3s-79-Yd7"/>
                     </connections>
                 </viewController>
